# geopack

./: .gitignore  CMakeLists.txt  README.md  compile.bat  makefile
.github/workflows/: ci.yml
cmake/: cmake_uninstall.cmake.in
doc/equations/: equations.aux  equations.tex
include/: geopack.h
lib/: libdatetime.dylib  libgeopack.dylib  libspline.dylib
src/: CMakeLists.txt  ConvCoords.cc  ConvCoords.h  compile.bat  dummyfunc.cc  dummyfunc.h  getdipoletilt.cc  getdipoletilt.h  makefile  modelfield.cc  modelfield.h  recalc.cc  recalc.h
src/fortran/: CMakeLists.txt  T89c.f  bessel.cc  bessel.h  makefile  t89.cc  t89.h  t89params.ods  t96.cc
src/libdatetime/: makefile
src/matrix/: CMakeLists.txt  identity.cc  identity.h  libmatrix.cc  makefile  matrix.cc  matrix.h  matrixarray.cc  matrixarray.h  matrixmath.cc  matrixmath.h  openmp_compat.h  rotmatrix.cc  rotmatrix.h
src/modelparams/: CMakeLists.txt  checkv.cc  checkv.h  makefile  modelparams.cc  modelparams.h  tsygdata.cc  tsygdata.h
src/tools/: BubbleArgSort.cc  BubbleArgSort.h  BubbleSort.h  CMakeLists.txt  argmax.cc  argmax.h  carttospherical.cc  carttospherical.h  linterp.cc  linterp.h  makefile  reverseelements.cc  reverseelements.h
src/tracing/: CMakeLists.txt  calculatehalpha.cc  calculatehalpha.h  converttracecoords.cc  converttracecoords.h  fieldlinedist.cc  fieldlinedist.h  fieldlinemidpoint.cc  fieldlinemidpoint.h  fieldliner.cc  fieldliner.h  fieldlinernorm.cc  fieldlinernorm.h  getmagequatorfp.cc  getmagequatorfp.h  interptraceclosestpos.cc  interptraceclosestpos.h  latlonlt.cc  latlonlt.h  makefile  trace.cc  trace.h  traceclosestpos.cc  traceclosestpos.h  tracefield.cc  tracefield.h  tracefieldline.cc  tracefieldline.h  tracefootprints.cc  tracefootprints.h  tracerotationmatrices.cc  tracerotationmatrices.h
test/: .gitignore  CMakeLists.txt  README.md  makefile  test.cc  testc  testcc
test/data/: c_wrappers.json  convcoords.json  getdipoletiltut.json  modelfield.json  tracefield.json
test/fortran/: CMakeLists.txt  makefile  testfortran.cc
test/savetestdata/: CMakeLists.txt  makefile  savetestdata.cc
test/testc.dSYM/Contents/Resources/DWARF/: testc
test/testcc.dSYM/Contents/Resources/DWARF/: testcc
test/unit/: CMakeLists.txt  makefile  minijson.h  test_geopack_golden.cc
